--- a/service/password/src/main/resources/application.properties
+++ b/service/password/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=password
 server.servlet.register-default-servlet=true
 server.port=35589
+logging.level.root=FATAL
+logging.file.name=./password.log
